--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-pandas>=2.0
-numpy>=1.26
-scikit-learn>=1.5
-matplotlib>=3.8
-seaborn>=0.13
-jupyterlab>=4.0
-ipykernel>=6.29
-pyarrow>=16.0
-joblib>=1.4
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.1
+matplotlib==3.8.4
+joblib==1.4.2
